tests/invalid/definite/ConstrainedSet_Invalid_1.whiley
define {int} where |$| > 1 as pintset

void System::main([string] args):
    pintset p
    p = {1}
    print str(p)
